# shared-deposit-monad

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14c616e7b68c_add_session_csrf_hash_and_invitation_.py  34260d5be01a_initial_documented_schema.py  b8e4a1c6d2f0_add_contract_transactions.py
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/app/api/v1/: __init__.py  auth.py  drafts.py  invitations.py  system.py  transactions.py
backend/app/auth/: __init__.py  dependencies.py  messages.py  ratelimit.py  service.py
backend/app/blockchain/: __init__.py  deployment.py  events.py  service.py
backend/app/canonical/: __init__.py  reason.py  terms.py
backend/app/cli/: __init__.py  register_transactions.py  verify_transactions.py
backend/app/database/: __init__.py  base.py  engine.py  health.py  session.py  setup.py  types.py
backend/app/models/: __init__.py  agreements.py  audit.py  auth.py  chain.py  claims.py  evidence.py  invitations.py  transactions.py  wallet.py
backend/app/schemas/: __init__.py  auth.py  common.py  drafts.py  invitations.py  system.py
backend/app/services/: __init__.py  audit.py  drafts.py  invitations.py  transactions.py
backend/tests/: auth_helpers.py  conftest.py  test_app_smoke.py  test_auth_flow.py  test_auth_security.py  test_canonical_terms.py  test_config.py  test_csrf.py  test_database_setup.py  test_drafts.py  test_integration_local.py  test_invitations.py  test_migrations.py  test_models_constraints.py  test_readiness.py  test_reason_hash.py  test_register_transactions.py  test_transactions.py  test_transactions_api.py
backend/tests/fixtures/: agreement2_transactions.json  canonical_terms_vector.json  wallets.py
contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: SharedDepositEscrow.sol
contracts/deployments/: monad-testnet.json
contracts/scripts/: deploy-monad-testnet.ts  sync-artifacts.mjs
contracts/test/: agreement.lifecycle.ts  claims.voting.ts  helpers.ts  invariants.property.ts  settlement.accounting.ts  (+1 more)
docs/: 00_README.md  01_SCOPE_DOCUMENT.md  02_TECHNICAL_DESIGN.md  03_IMPLEMENTATION_PLAN.md  04_USER_GUIDE.md  05_UI_UX_DESIGN_GUIDE.md  06_CLAUDE_CODE_MASTER_PROMPT.md  BUILD_LOG.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  viewport-audit.mjs  vite.config.ts
scripts/: run-dev.ps1  setup-local.ps1  test-all.ps1  verify-env.ps1
(+50 files in other folders)
