[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-deposit-backend"
version = "0.1.0"
description = "Shared Deposit FastAPI backend: auth, private metadata, canonicalization, evidence, chain indexing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "web3>=7.0",
    "eth-account>=0.13",
    "eth-utils>=4.0",
    "eth-hash[pycryptodome]>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyMySQL>=1.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# S101: pytest uses assert. S105/S106: tests use literal fake secrets on
# purpose. S608: test fixtures interpolate table/database names from fixed
# internal lists (never user input) for guarded cleanup SQL.
"tests/*" = ["S101", "S105", "S106", "S608"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `tests.conftest` importable identically on local Windows and CI Linux.
pythonpath = ["."]
